kubernetes/infrastructure/cilium/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: cilium
spec:
  parentRefs:
    - name: orion
      namespace: gateway
  hostnames:
    - "hubble.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
